@@ -1,3 +1,7 @@
+CBASE v7.x-2.x-dev, 2012-Jun-18 11:41:00 ChrisAlbrecht
+--------------------------------------------------------------------------------
+- Added theme setting to exclude cbase css.
+
 CBASE v7.x-2.x-dev, 2012-Jun-18 09:01:25 ChrisAlbrecht
 --------------------------------------------------------------------------------
 - Added LocalScroll library.
